--- a/WpfCadastroDepartamento.xaml
+++ b/WpfCadastroDepartamento.xaml
@@ -1,17 +1,16 @@
 ﻿<Window
-    x:Class="Sist_Controle.CadastroDepartamento"
+    x:Class="Sist_Controle.WpfCadastroDepartamento"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Sist_Controle"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="CadastroDepartamento"
+    Title="WpfCadastroDepartamento"
     Width="800"
     Height="650"
     MaxWidth="800"
     MaxHeight="650"
     Background="Transparent"
-    KeyDown="Window_KeyDown"
     Loaded="Window_Loaded"
     Style="{StaticResource PropriedadesTela}"
     WindowStartupLocation="CenterScreen"
@@ -74,7 +73,8 @@
                             VerticalContentAlignment="Center"
                             CharacterCasing="Upper"
                             SelectionChanged="txbDep_SelectionChanged"
-                            Style="{StaticResource TextArredondadoAuto}" />
+                            Style="{StaticResource TextArredondadoAuto}"
+                            TabIndex="0" />
                         <Popup
                             x:Name="popupDep"
                             Placement="Bottom"
@@ -94,12 +94,23 @@
                                 Visibility="Collapsed">
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Style="{StaticResource textBlockAuto}" Text="{Binding Path=Nome}" />
+                                        <TextBlock Style="{StaticResource TextBlockAuto}" Text="{Binding Path=Nome}" />
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
                             </ListBox>
                         </Popup>
 
+                        <Label
+                            Name="lblMarcaDep"
+                            Grid.Column="0"
+                            Margin="5"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Content="Buscar departamento..."
+                            FontFamily="Roboto"
+                            FontSize="14"
+                            FontWeight="Medium"
+                            Foreground="#adadad" />
                         <Button
                             x:Name="btnAddDep"
                             Grid.Column="1"
@@ -144,7 +155,8 @@
                             VerticalContentAlignment="Center"
                             CharacterCasing="Upper"
                             SelectionChanged="txbUsuario_SelectionChanged"
-                            Style="{StaticResource TextArredondadoAuto}" />
+                            Style="{StaticResource TextArredondadoAuto}"
+                            TabIndex="1" />
                         <Popup
                             x:Name="popupUsuario"
                             Placement="Bottom"
@@ -164,11 +176,23 @@
                                 Visibility="Collapsed">
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Style="{StaticResource textBlockAuto}" Text="{Binding Path=fullname}" />
+                                        <TextBlock Style="{StaticResource TextBlockAuto}" Text="{Binding Path=fullname}" />
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
                             </ListBox>
                         </Popup>
+
+                        <Label
+                            Name="lblMarcaUser"
+                            Grid.Column="0"
+                            Margin="5"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Content="Buscar usuário..."
+                            FontFamily="Roboto"
+                            FontSize="14"
+                            FontWeight="Medium"
+                            Foreground="#adadad" />
 
                         <Button
                             x:Name="btnSalvar"
