--- a/Style/WpfDialogResult.xaml
+++ b/Style/WpfDialogResult.xaml
@@ -1,9 +1,9 @@
 ﻿<Window
-    x:Class="Sist_Controle.WpfDialogResult"
+    x:Class="Sistema.WpfDialogResult"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Sist_Controle"
+    xmlns:local="clr-namespace:Sistema"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="WpfDialogResult"
     Width="345"
